Final playbook custom sections

--- a/AW2E-Burned-Over/translations/en.json
+++ b/AW2E-Burned-Over/translations/en.json
@@ -42,6 +42,7 @@
 	"do-battle": "Do battle",
 	"do-something-under-fire": "Act under fire/Charm or decieve someone",
 	"driver": "Driver",
+	"effects": "Effects",
 	"emerged-stasis": "You emerged from stasis",
 	"environ": "Environ",
 	"erase-holding-option": "erase an option from your holding",
@@ -51,6 +52,7 @@
 	"establish-gang-leadership": "Establish a <strong>gang</strong> and get <strong>leadership</strong>",
 	"establish-holding-wealth": "Establish a <strong>holding</strong> and get <strong>wealth</strong>",
 	"establish-venue-wealth": "Establish a <strong>venue</strong> and get <strong>wealth</strong>",
+	"exchange-machine-options": "Exchange one of your machine's options for another",
 	"experience": "Experience",
 	"features": "Features",
 	"first-impression": "First Impression",
@@ -138,6 +140,11 @@
 	"lock-unlock-playbook": "Lock/Unlock Playbook",
 	"look": "Look",
 	"looks": "Looks",
+	"machine-option-1": "<strong>AI Override</strong>: Tell the MC to create your AI override as a <strong>warlord</strong> threat. Once per session, and more often if you choose, tell the MC that your AI override takes over. Ask the MC what you do",
+	"machine-option-2": "<strong>Fury</strong>: When you <strong>confront someone</strong>, there’s no appeasing you. If they back down, mollify, prevaricate, or submit to you in any way, it provokes you; count it as forcing your hand. If they get away from you instead, you must pursue them and press the attack",
+	"machine-option-3": "<strong>Hive mind</strong>: You share thoughts and senses with others like you. Tell the MC to create other Weaponized as <strong>infiltrator</strong> threats. At any time, the MC can interrupt you to tell you what another Weaponized somewhere is seeing, feeling, and doing, or to have another Weaponized somewhere ask you what you’re seeing, feeling, and doing",
+	"machine-option-4": "<strong>Killing instinct</strong>: When you <strong>do battle</strong>, and whenever you have the opportunity to do so otherwise, you must spend at least 1 to inflict additional harm",
+	"machine-option-5": "<strong>Manual override</strong>: When someone tells you to do something, if they say the words 'manual override', you don’t have a choice, you have to undertake to do it",
     "massive": "Massive",
     "medic": "Medic",
 	"misses": "Misses",
@@ -229,6 +236,26 @@
 	"weaponized": "Weaponized",
 	"weird": "Weird",
 	"wolves-maelstrom": "Wolves of the Maelstrom",
+	"wolves-option-1": "people",
+	"wolves-option-2": "birds",
+	"wolves-option-3": "beasts",
+	"wolves-option-4": "insects",
+	"wolves-option-5": "angels",
+	"wolves-option-6": "shadows",
+	"wolves-option-7": "machines",
+	"wolves-option-8": "they have no faces",
+	"wolves-option-9": "they have human faces",
+	"wolves-option-11": "they have wolves' faces",
+	"wolves-option-12": "they have awful voices",
+	"wolves-option-13": "they have no expression",
+	"wolves-option-14": "they're dripping gore",
+	"wolves-option-15": "they only howl",
+	"wolves-option-16": "they don't stand on the ground",
+	"wolves-option-17": "they make terrible grinding noises",
+	"wolves-option-18": "they are made of metal and plastic",
+	"wolves-option-19": "they have empty holes for eyes",
+	"wolves-option-20": "they come and go impossibly",
+	"wolves-option-21": "they're invisible",
 	"workspace-lifesupport": "add life support to your workspace, and now you can work on people there too",
 	"your-bike": "Your Bike",
 	"your-cars": "Your Car(s)",
@@ -245,6 +272,7 @@
 	"your-children-option-10": "Still a young child",
 	"your-children-option-11": "Now dead and lost to me",
 	"your-den": "Your Den",
+	"your-machine": "Your Machine",
 	"your-mask": "Your Mask",
 	"your-people": "Your People",
 	"your-people-descr-1": "You have people, a strong and loyal group to whom you belong. They are your following, and you also get <strong>devotion</strong>. <br/> Your people are (choose 2)",
@@ -269,5 +297,4 @@
 	"your-vehicle-option-1": "<strong>A cagey brut</strong>.  Frame: pickup (or equivalent for this Hard Zone), massive=3, speed=0, handling=0, 1-armor. Strengths: rugged, capacious. Looks: rebar & rivets. Weakness: slow",
 	"your-vehicle-option-2": "<strong>A relentless machine</strong>. Frame: jeep (or equivalent for this Hard Zone), massive=2, speed=0, handling+1, 1-armor. Strengths: workhorse, off-road. Looks: vintage. Weaknesses: cramped, loud",
 	"your-vehicle-option-3": "<strong>A bold devil</strong>. Frame: muscle car (or equivalent for this Hard Zone), massive=2, speed+1, handling+1, 0-armor. Strengths: fast, aggressive. Looks: powerful, flashy. Weaknesses: guzzler, unreliable"
-
 }
