PL wfrp 4ed. - Typos and not translated words
-Few things was not translated 
-Corrected some typos
-Changed "Broń biała (prosta)" to "Broń biała (podstawowa)" because it's official version from polish handbook

--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -46,7 +46,7 @@
 	"Personal-Short-Term": "Krótki Cel Personalny",
 	"Personal-Long-Term": "Długi Cel Personalny",
 	"Party-Short-Term": "Krótki Cel Drużyny",
-	"Party-Long-Term": "Krótki Cel Drużyny",
+	"Party-Long-Term": "Długi Cel Drużyny",
 	"MOVEMENT": "SZYBKOŚĆ",
 	"Walk": "Chód",
 	"Run": "Bieg",
@@ -63,8 +63,8 @@
 	"Max-Enc": "Max Obc.",
 	"WEALTH": "ZAMOŻNOŚĆ",
 	"Gold Crowns": "Złote Korony",
-	"Silver Shillings": "Srebrne szylingi",
-	"Brass Pennies": "Pensy",
+	"Silver Shillings": "Srebrne Szylingi",
+	"Brass Pennies": "Brązowe Pensy",
 	"WOUNDS": "ŻYWOTNOŚĆ",
 	"Hardy": "Twardziel",
 	"Hardy-1": "Twardziel:1",
@@ -96,7 +96,7 @@
 	"T-p": "(Wt)",
 	"I-p": "(I)",
 	"Ag-p": "(Zr)",
-	"Dex-p": "(Zr)",
+	"Dex-p": "(Zw)",
 	"Int-p": "(Int)",
 	"WP-p": "(SW)",
 	"Fel-p": "(Ogd)",
@@ -124,7 +124,7 @@
 	"Row": "Wioślarstwo",
 	"Stealth": "Skradanie",
 	"MELEE-SPECIALISATIONS-(BASIC)": "SPECJALIZACJE BRONI BIAŁEJ (PODSTAWOWE)",
-	"Melee-i-Basic": "<i>Broń Biała</i> (Prosta)",
+	"Melee-i-Basic": "<i>Broń Biała</i> (Podstawowa)",
 	"Melee-i-Brawling": "<i>Broń Biała</i> (Pięści)",
 	"Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjska)",
 	"Melee-i-Fencing": "<i>Broń Biała</i> (Szermiercza)",
@@ -165,7 +165,7 @@
 	"Range/Reach": "Zasięg",
 	"Damage": "Obrażenia",
 	"Qualities": "Cechy oręża",
-	"Melee-Basic": "Broń Biała (Prosta)",
+	"Melee-Basic": "Broń Biała (Podstawowa)",
 	"Melee-Brawling": "Broń Biała (Pięści)",
 	"Melee-Cavalry": "Broń Biała (Kawaleryjska)",
 	"Melee-Fencing": "Broń Biała (Szermiercza)",
@@ -204,22 +204,22 @@
 	"HISTORY": "HISTORIA",
 	"NOTES": "NOTATKI",
 	"Experience-Points": "Punkty doświadczenia",
-	"Total-XP": "Suma XP",
-	"Spent-XP": "Wydane XP",
-	"Left-XP": "Pozostałe XP",
+	"Total-XP": "Suma PD",
+	"Spent-XP": "Wydane PD",
+	"Left-XP": "Pozostałe PD",
 	"Advancements-Taken-Calculated-p": "Wzięte Rozwinięcia (Policzone):",
-	"main": "Main",
-	"skills-talent": "Skills & Talents",
-	"gear-magic": "Gear & Magic",
-	"information": "Information",
-	"experience": "Experience",
-	"SBx3": "SBx3",
-	"SBx2": "SBx2",
-	"SB": "SB",
-	"TBx3": "TBx3",
-	"TBx2": "TBx2",
-	"TB": "TB",
-	"WPBx3": "WPBx3",
-	"WPBx2": "WPBx2",
-	"WPB": "WPB"
+	"main": "Główna",
+	"skills-talent": "Umiejętności i Talenty",
+	"gear-magic": "Wyposażenie i Magia",
+	"information": "Informacje",
+	"experience": "Doświadczenie",
+	"SBx3": "BSx3",
+	"SBx2": "BSx2",
+	"SB": "BS",
+	"TBx3": "BWtx3",
+	"TBx2": "BWtx2",
+	"TB": "BWt",
+	"WPBx3": "BSWx3",
+	"WPBx2": "BSWx2",
+	"WPB": "BSW"
 }
