--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -95,8 +95,8 @@
 	"S-p": "(S)",
 	"T-p": "(Wt)",
 	"I-p": "(I)",
-	"Ag-p": "(Zr)",
-	"Dex-p": "(Zw)",
+	"Ag-p": "(Zw)",
+	"Dex-p": "(Zr)",
 	"Int-p": "(Int)",
 	"WP-p": "(SW)",
 	"Fel-p": "(Ogd)",
