--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -53,7 +53,7 @@
 	"INITIATIVE": "INICJATYWA",
 	"I Test /No Tracker/": "Test I (Bez Śledzenia)",
 	"I Bonus": "Bonus I",
-	"I+Ag Bonus": "I + Bonus Zr",
+	"I+Ag Bonus": "I + Bonus Zw",
 	"Roll": "Rzuć",
 	"ENCUMBERANCE": "OBCIĄŻENIE",
 	"Weapons": "Bronie",
