--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -125,7 +125,7 @@
 	"Stealth": "Skradanie",
 	"MELEE-SPECIALISATIONS-(BASIC)": "SPECJALIZACJE BRONI BIAŁEJ (PODSTAWOWE)",
 	"Melee-i-Basic": "<i>Broń Biała</i> (Podstawowa)",
-	"Melee-i-Brawling": "<i>Broń Biała</i> (Pięści)",
+	"Melee-i-Brawling": "<i>Broń Biała</i> (Bijatyka)",
 	"Melee-i-Cavalry": "<i>Broń Biała</i> (Kawaleryjska)",
 	"Melee-i-Fencing": "<i>Broń Biała</i> (Szermiercza)",
 	"Melee-i-Flail": "<i>Broń Biała</i> (Korbacze)",
@@ -133,14 +133,14 @@
 	"Melee-i-Pole-Arm": "<i>Broń Biała</i> (Drzewcowa)",
 	"Melee-i-2H": "<i>Broń Biała</i> (Dwuręczna)",
 	"RANGED-SPECIAlZATION-ADVANCED": "SPECJALIZACJE BRONI DYSTANSOWEJ (ZAAWANSOWANE)",
-	"Ranged-i-Blackpowder": "<i>Broń Zasięg.</i> (Czarnoprochowa)",
-	"Ranged-i-Bow": "<i>Broń Zasięg.</i> (Łuk)",
-	"Ranged-i-Crossbow": "<i>Broń Zasięg.</i> (Kusza) †",
-	"Ranged-i-Engineering": "<i>Broń Zasięg.</i> (Inżynierska)",
-	"Ranged-i-Entangling": "<i>Broń Zasięg.</i> (Unieruchomiająca)",
-	"Ranged-i-Explosives": "<i>Broń Zasięg. </i>(Wybuchowa)",
-	"Ranged-i-Sling": "<i>Broń Zasięg.</i> (Proca)",
-	"Ranged-i-Throwing": "<i>Broń Zasięg.</i> (Rzucana) †",
+	"Ranged-i-Blackpowder": "<i>Broń Zasięg.</i> (Prochowa)",
+	"Ranged-i-Bow": "<i>Broń Zasięg.</i> (Łuki)",
+	"Ranged-i-Crossbow": "<i>Broń Zasięg.</i> (Kusze) †",
+	"Ranged-i-Engineering": "<i>Broń Zasięg.</i> (Eksperymentalna)",
+	"Ranged-i-Entangling": "<i>Broń Zasięg.</i> (Oplątująca)",
+	"Ranged-i-Explosives": "<i>Broń Zasięg. </i> (Materiały Wybuchowe)",
+	"Ranged-i-Sling": "<i>Broń Zasięg.</i> (Proce)",
+	"Ranged-i-Throwing": "<i>Broń Zasięg.</i> (Miotana) †",
 	"Magic-Notice": "†= Może być użyta, nie będąc wyszkolonym, lecz traci wszystkie Zalety",
 	"MAGIC-BLESSINGS-AND-MIRACLES-ADVANCED": "MAGIA, BŁOGOSŁAWIEŃSTWA I CUDY (ZAAWANSOWANE)",
 	"Language-i-Magick-p": "<i>Język</i> (Magiczny)",
@@ -166,21 +166,21 @@
 	"Damage": "Obrażenia",
 	"Qualities": "Cechy oręża",
 	"Melee-Basic": "Broń Biała (Podstawowa)",
-	"Melee-Brawling": "Broń Biała (Pięści)",
+	"Melee-Brawling": "Broń Biała (Bijatyka)",
 	"Melee-Cavalry": "Broń Biała (Kawaleryjska)",
 	"Melee-Fencing": "Broń Biała (Szermiercza)",
 	"Melee-Flail": "Broń Biała (Korbacze)",
 	"Melee-Parry": "Broń Biała (Parująca)",
 	"Melee-Pole-Arm": "Broń Biała (Drzewcowa)",
 	"Melee-2H": "Broń Biała (Dwuręczna)",
-	"Ranged-Blackpowder": "Broń Zasięg. (Czarnoprochowa)",
-	"Ranged-Bow": "Broń Zasięg. (Łuk)",
-	"Ranged-Crossbow": "Broń Zasięg. (Kusza)",
-	"Ranged-Engineering": "Broń Zasięg. (Inżynierska)",
-	"Ranged-Entangling": "Broń Zasięg. (Unieruchomiająca)",
-	"Ranged-Explosives": "Broń Zasięg. (Wybuchowa)",
-	"Ranged-Sling": "Broń Zasięg. (Proca)",
-	"Ranged-Throwing": "Broń Zasięg. (Rzucana)",
+	"Ranged-Blackpowder": "Broń Zasięg. (Prochowa)",
+	"Ranged-Bow": "Broń Zasięg. (Łuki)",
+	"Ranged-Crossbow": "Broń Zasięg. (Kusze)",
+	"Ranged-Engineering": "Broń Zasięg. (Eksperymentalna)",
+	"Ranged-Entangling": "Broń Zasięg. (Oplątująca)",
+	"Ranged-Explosives": "Broń Zasięg. (Materiały Wybuchowe)",
+	"Ranged-Sling": "Broń Zasięg. (Proce)",
+	"Ranged-Throwing": "Broń Zasięg. (Miotana)",
 	"Weapon-Skill": "Walka Wręcz",
 	"Ballistic-Skill": "Umiejętności Strzeleckie",
 	"SPELLS-AND-PRAYERS": "CZARY I MODLITWY",
