--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -46,7 +46,7 @@
 	"Personal-Short-Term": "Krótki Cel Personalny",
 	"Personal-Long-Term": "Długi Cel Personalny",
 	"Party-Short-Term": "Krótki Cel Drużyny",
-	"Party-Long-Term": "Długi Cel Drużyny",
+	"Party-Long-Term": "Krótki Cel Drużyny",
 	"MOVEMENT": "SZYBKOŚĆ",
 	"Walk": "Chód",
 	"Run": "Bieg",
@@ -95,7 +95,7 @@
 	"S-p": "(S)",
 	"T-p": "(Wt)",
 	"I-p": "(I)",
-	"Ag-p": "(Zw)",
+	"Ag-p": "(Zr)",
 	"Dex-p": "(Zr)",
 	"Int-p": "(Int)",
 	"WP-p": "(SW)",
