--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -49,6 +49,7 @@
 	"consumable-u": "crwdns90846:0crwdne90846:0",
 	"copper": "crwdns90848:0crwdne90848:0",
 	"crafting": "crwdns90850:0crwdne90850:0",
+	"crafting-monster": "crwdns133921:0crwdne133921:0",
 	"critical-injuries": "crwdns90852:0crwdne90852:0",
 	"critical-u": "crwdns90854:0crwdne90854:0",
 	"current": "crwdns131308:0crwdne131308:0",
@@ -74,8 +75,10 @@
 	"encumbrance": "crwdns90888:0crwdne90888:0",
 	"encumbrance-current-abbr": "crwdns131310:0crwdne131310:0",
 	"endurance": "crwdns90890:0crwdne90890:0",
+	"endurance-monster": "crwdns133923:0crwdne133923:0",
 	"epic": "crwdns90892:0crwdne90892:0",
 	"experience-u": "crwdns90894:0crwdne90894:0",
+	"extra-damage": "crwdns133925:0crwdne133925:0",
 	"face": "crwdns90896:0crwdne90896:0",
 	"features": "crwdns90898:0crwdne90898:0",
 	"fish": "crwdns90900:0crwdne90900:0",
@@ -122,7 +125,9 @@
 	"max-abbr": "crwdns105738:0crwdne105738:0",
 	"meat": "crwdns90972:0crwdne90972:0",
 	"melee": "crwdns90974:0crwdne90974:0",
+	"melee-monster": "crwdns133927:0crwdne133927:0",
 	"might": "crwdns90976:0crwdne90976:0",
+	"might-monster": "crwdns133929:0crwdne133929:0",
 	"mighty": "crwdns90978:0crwdne90978:0",
 	"monster": "crwdns131320:0crwdne131320:0",
 	"monster-attack": "crwdns131322:0crwdne131322:0",
