--- a/AGE System/translations/zu.json
+++ b/AGE System/translations/zu.json
@@ -151,5 +151,11 @@
    "show-the-conviction-section-info": "crwdns61248:0crwdne61248:0",
    "show-the-corruption-section-info": "crwdns61249:0crwdne61249:0",
    "show-the-ammo-column-info": "crwdns61250:0crwdne61250:0",
-   "show-the-money/currency-section-info": "crwdns61251:0crwdne61251:0"
+   "show-the-money/currency-section-info": "crwdns61251:0crwdne61251:0",
+   "origin-u": "crwdns133909:0crwdne133909:0",
+   "drive-u": "crwdns133911:0crwdne133911:0",
+   "profession-u": "crwdns133913:0crwdne133913:0",
+   "appearance-u": "crwdns133915:0crwdne133915:0",
+   "belter": "crwdns133917:0crwdne133917:0",
+   "martian": "crwdns133919:0crwdne133919:0"
 }
