--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -632,5 +632,5 @@
     "beidhand_kampf_mod": "Ambidextre mod. +/-",
     "falsche_hand_mod": "Main non directrice mod. +/-",
     "talente_mod": "Modificateur aux dés de talent",
-    "switch_description_status": "Anzeige umschalten"
+    "switch_description_status": "Basculer l'affichage"
 }
