--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -49,6 +49,7 @@
 	"consumable-u": "CONSOMMABLES",
 	"copper": "Cuivre",
 	"crafting": "Artisanat",
+	"crafting-monster": "Crafting",
 	"critical-injuries": "Blessures Critique",
 	"critical-u": "BLESSURES CRITIQUES",
 	"current": "Actuel",
@@ -74,8 +75,10 @@
 	"encumbrance": "Encombrement",
 	"encumbrance-current-abbr": "Encombrement actuel",
 	"endurance": "Endurance",
+	"endurance-monster": "Endurance",
 	"epic": "Épique",
 	"experience-u": "EXPÉRIENCE",
+	"extra-damage": "Toggle extra damage tracking (25-48)",
 	"face": "Visage",
 	"features": "Fonctionnalités",
 	"fish": "Poisson",
@@ -122,7 +125,9 @@
 	"max-abbr": "Max",
 	"meat": "Viande",
 	"melee": "Mêlée",
+	"melee-monster": "Melee",
 	"might": "Puissance",
+	"might-monster": "Might",
 	"mighty": "Puissant",
 	"monster": "Monstre",
 	"monster-attack": "Attaque du monstre",
