--- a/SavageWorlds-Tabbed/translations/zu.json
+++ b/SavageWorlds-Tabbed/translations/zu.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "crwdns67306:0crwdne67306:0",
     "deadlands-hell-on-earth": "crwdns67307:0crwdne67307:0",
     "east-texas-university": "crwdns67308:0crwdne67308:0",
-    "inteface-zero-20": "crwdns67309:0crwdne67309:0",
+    "interface-zero-20": "crwdns67309:0crwdne67309:0",
     "lankhmar": "crwdns67310:0crwdne67310:0",
     "the-last-parsec": "crwdns67311:0crwdne67311:0",
     "necessary-evil": "crwdns67312:0crwdne67312:0",
