--- a/SavageWorlds-Tabbed/translations/de.json
+++ b/SavageWorlds-Tabbed/translations/de.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "Deadlands: Noir",
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
-    "inteface-zero-20": "Interface Zero 2.0",
+    "interface-zero-20": "Interface Zero 2.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
