--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "Deadlands : Noir",
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
-    "inteface-zero-20": "Interface zéro 2.0",
+    "interface-zero-20": "Interface zéro 2.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "Le dernier Parsec",
     "necessary-evil": "Mal nécessaire",
