SWADE-tabbed Version 4.0 (#5779)
* Typos and Style

Fixed code style issues (stray single quotes) plus a myriad typos. Did not change sophmore to sophomore when it was being used as a variable name to avoid issues with existing sheets, but did fix the spelling of any displays.

* [Savage Worlds Tabbed] Charisma Config

Added a configuration option to disable Charisma, as it's not used in SWADE.

* Typo fix

Show Arhcetype->Show Archetype

* Rules modifications Dice Smoothing

First step, added dice smoothing to rules modifications

* Dice Smoothing translation, config sheet

Adds dice smoothing as an option to translation and the config sheet

* Started 3.10 Release Notes

Started release notes for 3.10. Probably should've made the charisma fix 3.9.1 but here we are.

* Prepping IZ 3.0

Starting work on IZ 3.0 update

* Release 3.10 section

starting to set things up

* Dice Smoothing Implemented

Needs testing, but it should add dF to skill and damage rolls if and only if the smooth_dice attribute is checked.

* Minor design fix

now that I've got the dF in the skill call, the checkbox can just be 0 and 1

* IZ3.0 Strain and Street Cred UI

Building out the basic UI work for IZ 3.0's Strain and Street Cred

* UI elements cont.

Added the proper hiding controls for Strain & Street cred 3.0

* More UI work

CSS hiding

* Typos and fixes

Also gitignoring my SWTRedesign.js so I can more easily edit the sheet workers

* Interface Zero 3.0 work

Trying to get Strain & Street Cred to work

* Highlighting StrainThree

Added highlighting CSS for IZ 3.0 Strain

* Reverting strain changes

Strain works the same it's just a stylistic choice of die vs. flat value as base. Die is probably better, so we're keeping just one version of Strain.

* Display Fix

Street cred should properly show now

* Comment Label

* Update .gitignore

* problem fix

deleted stray comma

* Typo fix

Inconsistent attrib

--- a/SavageWorlds-Tabbed/translations/af.json
+++ b/SavageWorlds-Tabbed/translations/af.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "Deadlands: Noir",
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
-    "inteface-zero-20": "Interface Zero 2.0",
+    "interface-zero-20": "Interface Zero 2.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
@@ -1004,7 +1004,7 @@
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
-    "show-archetypes": "Show Arhcetype",
+    "show-archetypes": "Show Archetype",
     "show-archetype-desc": "Check this box to show the Archetype field.",
     "show-burn": "Show Burn",
     "show-burn-desc": "Check this box to show the Burn field.",
