--- a/SavageWorlds-Tabbed/translations/pt.json
+++ b/SavageWorlds-Tabbed/translations/pt.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "Deadlands: Noir",
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
-    "inteface-zero-20": "Interface Zero 2.0",
+    "interface-zero-20": "Interface Zero 2.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
@@ -444,11 +444,11 @@
     "fame-text": "Usado para mostrar quanta fama o personagem tem. Cenários como Pirates of the Spanish Main usam esse campo.",
     "glory-text": "Usado para mostrar quanta glória o personagem tem. Cenários como Hellfrost usam esse campo.",
     "grit-text": "Uma medida da resistência de alguém contra os horrores. Útil em cenários de horror como Deadlands. Essa é uma característica derivada baseada no Estágio do personagem.",
-    "neural-toughness-text": "Uma medida da resistência de alguém contra ataques de hackers. Útil em cenários cyberpunk como Inteface Zero 2.0. Essa é uma característica derivada baseada na Resistência do personagem.",
+    "neural-toughness-text": "Uma medida da resistência de alguém contra ataques de hackers. Útil em cenários cyberpunk como interface Zero 2.0. Essa é uma característica derivada baseada na Resistência do personagem.",
     "reason-text": "Usado em Rippers para medir a Sanidade de alguém.",
     "sanity-text": "Usado para mostrar a Sanidade de um personagem. Útil para a maioria dos cenários de Horror. Essa é uma característica derivada baseada em (Espírito/2)+2.",
     "status-text": "Um reflexo da posição de alguém na sociedade, e a estima de outros para com o herói. É usado em Rippers.",
-    "strain-text": "Usado para medir quanta tensão um personagem possui devido a aprimoramentos tecnológicos. Esse campo é útil em cenários como Inteface Zero 2.0 ou outros Cyberpunks.",
+    "strain-text": "Usado para medir quanta tensão um personagem possui devido a aprimoramentos tecnológicos. Esse campo é útil em cenários como interface Zero 2.0 ou outros Cyberpunks.",
     "street-cred-text": "Usado para medir a reputação de um personagem nas ruas. Base = 2 por Estágio do personagem. Esse campo é útil para cenários como Interface Zero 2.0 ou outros Cyberpunks.",
     "field-name-replacements": "Substituição de Nome dos Campos",
     "class-rank": "Class (Estágio)",
@@ -1004,7 +1004,7 @@
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
-    "show-archetypes": "Show Arhcetype",
+    "show-archetypes": "Show Archetype",
     "show-archetype-desc": "Check this box to show the Archetype field.",
     "show-burn": "Show Burn",
     "show-burn-desc": "Check this box to show the Burn field.",
