--- a/SavageWorlds-Tabbed/translations/en.json
+++ b/SavageWorlds-Tabbed/translations/en.json
@@ -402,7 +402,7 @@
     "deadlands-noir": "Deadlands: Noir",
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
-    "inteface-zero-20": "Interface Zero 2.0",
+    "interface-zero-20": "Interface Zero 2.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
@@ -1004,7 +1004,7 @@
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
-    "show-archetypes": "Show Arhcetype",
+    "show-archetypes": "Show Archetype",
     "show-archetype-desc": "Check this box to show the Archetype field.",
     "show-burn": "Show Burn",
     "show-burn-desc": "Check this box to show the Burn field.",
