--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -212,6 +212,7 @@
     "schicksalspunkte": "Fate Points",
     "schilde": "Shield",
     "schild-waffe": "Shield/Weapon",
+    "schilde-waffen": "Schilde/Zweitwaffen",
     "schilde-und-nebenhandwaffen": "Shield and Off-Hand Weapon",
     "schildparade-parierwaffe": "Shield Parry",
     "schips": "Fate Tokens",
@@ -646,5 +647,13 @@
     "kraeuter-tinkturen": "Kräuter und Tinkturen",
     "add_effekt": "Effekt-Modifikator hinzufügen",
     "quelle-auswaehlen": "Quelle auswählen",
-    "weitere-merkmale": "Weitere Merkmale"
+    "weitere-merkmale": "Weitere Merkmale",
+    "bruchfaktor": "Bruchfaktor",
+    "strukturpunkte": "Strukturpunkte",
+    "temp-modifikatoren": "temp. Mod.:",
+    "AT": "AT",
+    "PA": "PA",
+    "TP": "TP",
+    "FK": "FK",
+    "rucksack": "Rucksack"
 }
