--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -17,7 +17,7 @@
     "aktuell": "Actuel",
     "alter": "Âge",
     "anmerkung": "Notes",
-    "anmerkungen": "Anmerkungen",
+    "anmerkungen": "Notes",
     "ap-ausgegeben": "PAV dépensés",
     "ap-gesamt": "Total de PAV",
     "ap-verfuegbar": "PAV disponibles",
@@ -72,12 +72,12 @@
     "erfahren": "Expérimenté (1100 PAV)",
     "erfahrungsgrad": "Degré d'expérience",
     "erregung": "Excitation",
-    "erweiterungen": "Erweiterungen",
+    "erweiterungen": "Extensions",
     "erweiterung1": "1. Extension",
     "erweiterung2": "2. Extension",
     "erweiterung3": "3. Extension",
-    "erweiterung4": "4. Erweiterung",
-    "erweiterung5": "5. Erweiterung",
+    "erweiterung4": "4. extension",
+    "erweiterung5": "5. Extension",
     "familie": "Famille",
     "fechtwaffen": "Armes de duel",
     "fernkampf": "Combat à distance",
@@ -212,6 +212,7 @@
     "schicksalspunkte": "Points de destin",
     "schilde": "Boucliers",
     "schild-waffe": "Bouclier/Arme",
+    "schilde-waffen": "Schilde/Zweitwaffen",
     "schilde-und-nebenhandwaffen": "Boucliers et armes de main non directrice",
     "schildparade-parierwaffe": "Parade au bouclier",
     "schips": "DES",
@@ -637,14 +638,22 @@
     "falsche_hand_mod": "Main non directrice mod. +/-",
     "talente_mod": "Modificateur aux dés de talent",
     "switch_description_status": "Basculer l'affichage",
-    "show_description": "Beschreibung anzeigen",
-    "show_modifier": "Modifikatoren anzeigen",
-    "filter": "Filter:",
-    "umgebung": "Umgebung",
-    "combat-situation": "Kampfsituation",
-    "artefakt": "Artefakt",
-    "kraeuter-tinkturen": "Kräuter und Tinkturen",
-    "add_effekt": "Effekt-Modifikator hinzufügen",
-    "quelle-auswaehlen": "Quelle auswählen",
-    "weitere-merkmale": "Weitere Merkmale"
+    "show_description": "Afficher la description",
+    "show_modifier": "Afficher les modificateurs",
+    "filter": "Filtre :",
+    "umgebung": "Espace",
+    "combat-situation": "Situation de combat",
+    "artefakt": "Artefact",
+    "kraeuter-tinkturen": "Herbes et teintures",
+    "add_effekt": "Ajouter un modificateur d'effet",
+    "quelle-auswaehlen": "Sélectionner la source",
+    "weitere-merkmale": "Autres domaines",
+    "bruchfaktor": "Bruchfaktor",
+    "strukturpunkte": "Strukturpunkte",
+    "temp-modifikatoren": "temp. Mod.:",
+    "AT": "AT",
+    "PA": "PA",
+    "TP": "TP",
+    "FK": "FK",
+    "rucksack": "Rucksack"
 }
