--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
@@ -149,7 +149,7 @@
     "leicht": "crwdns119680:0crwdne119680:0",
     "legendaer": "crwdns119682:0crwdne119682:0",
     "leiteigenschaft": "crwdns119684:0crwdne119684:0",
-    "leiteigschadensb": "crwdns119686:0crwdne119686:0",
+    "leiteigschadensb": "crwdns136457:0crwdne136457:0",
     "liegend": "crwdns119688:0crwdne119688:0",
     "magie": "crwdns119690:0crwdne119690:0",
     "malus": "crwdns119692:0crwdne119692:0",
@@ -212,6 +212,7 @@
     "schicksalspunkte": "crwdns119808:0crwdne119808:0",
     "schilde": "crwdns119810:0crwdne119810:0",
     "schild-waffe": "crwdns119812:0crwdne119812:0",
+    "schilde-waffen": "crwdns136459:0crwdne136459:0",
     "schilde-und-nebenhandwaffen": "crwdns119814:0crwdne119814:0",
     "schildparade-parierwaffe": "crwdns119816:0crwdne119816:0",
     "schips": "crwdns121354:0crwdne121354:0",
@@ -646,5 +647,13 @@
     "kraeuter-tinkturen": "crwdns136125:0crwdne136125:0",
     "add_effekt": "crwdns136127:0crwdne136127:0",
     "quelle-auswaehlen": "crwdns136129:0crwdne136129:0",
-    "weitere-merkmale": "crwdns136131:0crwdne136131:0"
+    "weitere-merkmale": "crwdns136131:0crwdne136131:0",
+    "bruchfaktor": "crwdns136461:0crwdne136461:0",
+    "strukturpunkte": "crwdns136463:0crwdne136463:0",
+    "temp-modifikatoren": "crwdns136465:0crwdne136465:0",
+    "AT": "crwdns136467:0crwdne136467:0",
+    "PA": "crwdns136469:0crwdne136469:0",
+    "TP": "crwdns136471:0crwdne136471:0",
+    "FK": "crwdns136473:0crwdne136473:0",
+    "rucksack": "crwdns136475:0crwdne136475:0"
 }
