--- a/SavageWorlds-Tabbed/translations/de.json
+++ b/SavageWorlds-Tabbed/translations/de.json
@@ -67,6 +67,8 @@
     "toughness": "Robustheit",
     "corruption": "Korruption",
     "street-cred": "Straßenruf:",
+    "street-cred-two": "Street Cred (IZ 2.0)",
+    "street-cred-three": "Street Cred (IZ 3.0)",
     "text-info-strain-base": "So hoch wie der Würfel des Characters der unaugmentierten Willenskraft oder Konstitution, was davon niedriger ist.",
     "text-info-strain-mode": "Nummer von zusätzlichen Punkten an Belastung, die der Charakter aushalten kann.",
     "max": "Max",
@@ -403,6 +405,7 @@
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
     "interface-zero-20": "Interface Zero 2.0",
+    "interface-zero-30": "Interface Zero 3.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
@@ -450,12 +453,18 @@
     "status-text": "Eine Reflektion der Position in der Gesellschaft des Charakters, und mit welcher Wertschätzung andere den Helden begegnen. Das wird in Rippers benutzt.",
     "strain-text": "Benutzt um zu messen, wie stark ein Charakter durch die Augmentation von Bioware leidet. Dieses Feld ist nützlich für Settings wie Interface Zero 2.0 oder andere Cyberpunk-Settings.",
     "street-cred-text": "Wird benutzt um den Ruf des Charakters auf der Straße zu messen. Basis = 2 pro Charakterrang. Dieses Feld ist nützlich für Settings wie Interface Zero 2.0 oder andere Cyberpunk-Settings.",
+    "street-cred-three-text": "Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0",
     "field-name-replacements": "Feldnamenersatz",
     "class-rank": "Klasse (Rang)",
     "clams-money": "Muscheln (Geld)",
     "wealth": "Wealth",
     "broke": "Broke",
     "use-the-wealth-system": "Use the Wealth System",
+    "use-smooth-dice": "Smooth Dice",
+    "use-smooth-dice-desc": "Smooths dice probability curves by adding 1dF (1, 0, -1) to every roll",
+    "smooth-dice-fix": "Added option for dice smoothing, adding 1dF to every roll. This specifically fixes the probability quirk where d4-2 was more likely to succeed against TN 4 than d6-2.",
+    "40000-typos": "General typo fixes",
+    "IZ30patch": "Added support for Interface Zero 3.0 with toggleable augmentations and a new Street Cred",
     "interface-zero": "Interface Zero 2.0",
     "code-name-character": "Codename (Charaktername)",
     "class-rank-text": "Ersetzt 'Rang' mit 'Klasse'. Für ETU.",
@@ -764,6 +773,7 @@
     "power-points": "Power Points",
     "potential-psychic-energy-abbr-u": "PPE",
     "skill-only": "Skill Only",
+    "enable": "Enable",
     "augmentation": "Augmentation",
     "experience-points-abbr-u-advances": "XP (Advances)",
     "experience-points-text": "Change the Advances designation used to determine rank to XP.",
@@ -989,6 +999,9 @@
     "show-strain-desc": "Check this box to use the Strain Stat.",
     "show-street-cred": "Show Street Cred",
     "show-street-cred-desc": "Check this box to use the Street Cred Stat.",
+    "show-street-cred-three": "Show Street Cred (IZ 3.0) ",
+    "show-street-cred-three-desc": "Check this box to use the Street Cred (IZ 3.0) Stat.",
+    "street-cred-three-wild-die-type": "Set the wild die for Street Cred",
     "use-wealth-desc": "Use the Wealth System found in Savage Worlds Adventure Edition",
     "use-wealth-mod-desc": "Displays a modifier field for the wealth roll. Useful for things like Edges or Hindrances that always apply a modifier to the wealth roll.",
     "money-label-desc": "Selecting an option will change the Money lable to the one selected.",
@@ -1004,7 +1017,7 @@
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
-    "show-archetypes": "Show Archetype",
+    "show-archetypes": "Show Arhcetype",
     "show-archetype-desc": "Check this box to show the Archetype field.",
     "show-burn": "Show Burn",
     "show-burn-desc": "Check this box to show the Burn field.",
