--- a/SavageWorlds-Tabbed/translations/es.json
+++ b/SavageWorlds-Tabbed/translations/es.json
@@ -67,6 +67,8 @@
     "toughness": "Dureza",
     "corruption": "Corrupción",
     "street-cred": "Cred. Calle:",
+    "street-cred-two": "Street Cred (IZ 2.0)",
+    "street-cred-three": "Street Cred (IZ 3.0)",
     "text-info-strain-base": "Igual al dado sin aumentar de Espíritu o vigor, el más bajo.",
     "text-info-strain-mode": "Número adicional de puntos de esfurzo que el personaje puede aguantar.",
     "max": "Max",
@@ -403,6 +405,7 @@
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
     "interface-zero-20": "Interface Zero 2.0",
+    "interface-zero-30": "Interface Zero 3.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "The Last Parsec",
     "necessary-evil": "Necessary Evil",
@@ -450,12 +453,18 @@
     "status-text": "Un reflejo del estatus social, y la estima que se le tiene al pj. Util en Rippers.",
     "strain-text": "Medir el estres por acumulación de bioimplantes. Util en settings como Interface Zero 2.0 u otros Cyberpunk.",
     "street-cred-text": "Util para medir la reputación en las calles. Base = 2 por Rango. Util para Interface Zero 2.0 u otros Cyberpunk.",
+    "street-cred-three-text": "Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0",
     "field-name-replacements": "Remplaza al campo de Nombre",
     "class-rank": "Clase (Rango)",
     "clams-money": "Ostras (Dinero)",
     "wealth": "Wealth",
     "broke": "Broke",
     "use-the-wealth-system": "Use the Wealth System",
+    "use-smooth-dice": "Smooth Dice",
+    "use-smooth-dice-desc": "Smooths dice probability curves by adding 1dF (1, 0, -1) to every roll",
+    "smooth-dice-fix": "Added option for dice smoothing, adding 1dF to every roll. This specifically fixes the probability quirk where d4-2 was more likely to succeed against TN 4 than d6-2.",
+    "40000-typos": "General typo fixes",
+    "IZ30patch": "Added support for Interface Zero 3.0 with toggleable augmentations and a new Street Cred",
     "interface-zero": "Interface Zero 2.0",
     "code-name-character": "Nombre clave (Character Name)",
     "class-rank-text": "Remplaza 'Rango' con 'Clase'. Apropiado para ETU.",
@@ -764,6 +773,7 @@
     "power-points": "Power Points",
     "potential-psychic-energy-abbr-u": "PPE",
     "skill-only": "Skill Only",
+    "enable": "Enable",
     "augmentation": "Augmentation",
     "experience-points-abbr-u-advances": "XP (Advances)",
     "experience-points-text": "Change the Advances designation used to determine rank to XP.",
@@ -989,6 +999,9 @@
     "show-strain-desc": "Check this box to use the Strain Stat.",
     "show-street-cred": "Show Street Cred",
     "show-street-cred-desc": "Check this box to use the Street Cred Stat.",
+    "show-street-cred-three": "Show Street Cred (IZ 3.0) ",
+    "show-street-cred-three-desc": "Check this box to use the Street Cred (IZ 3.0) Stat.",
+    "street-cred-three-wild-die-type": "Set the wild die for Street Cred",
     "use-wealth-desc": "Use the Wealth System found in Savage Worlds Adventure Edition",
     "use-wealth-mod-desc": "Displays a modifier field for the wealth roll. Useful for things like Edges or Hindrances that always apply a modifier to the wealth roll.",
     "money-label-desc": "Selecting an option will change the Money lable to the one selected.",
@@ -1004,7 +1017,7 @@
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
-    "show-archetypes": "Show Archetype",
+    "show-archetypes": "Show Arhcetype",
     "show-archetype-desc": "Check this box to show the Archetype field.",
     "show-burn": "Show Burn",
     "show-burn-desc": "Check this box to show the Burn field.",
