--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/ru.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/ru.json
@@ -212,6 +212,7 @@
     "schicksalspunkte": "Schicksalspunkte",
     "schilde": "Schilde",
     "schild-waffe": "Schild/Waffe",
+    "schilde-waffen": "Schilde/Zweitwaffen",
     "schilde-und-nebenhandwaffen": "Schilde und Nebenhandwaffen",
     "schildparade-parierwaffe": "Schildparade",
     "schips": "Schips",
@@ -646,5 +647,13 @@
     "kraeuter-tinkturen": "Kräuter und Tinkturen",
     "add_effekt": "Effekt-Modifikator hinzufügen",
     "quelle-auswaehlen": "Quelle auswählen",
-    "weitere-merkmale": "Weitere Merkmale"
+    "weitere-merkmale": "Weitere Merkmale",
+    "bruchfaktor": "Bruchfaktor",
+    "strukturpunkte": "Strukturpunkte",
+    "temp-modifikatoren": "temp. Mod.:",
+    "AT": "AT",
+    "PA": "PA",
+    "TP": "TP",
+    "FK": "FK",
+    "rucksack": "Rucksack"
 }
