--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -17,11 +17,11 @@
 	"race": "Race",
 	"class": "Classe",
 	"age": "Âge",
-	"level": "Niveau",
+	"level": "Niv.",
 	"development-points": "PF",
 	"presence": "Présence",
 	"xperience-points": "XP",
-	"level-next": "Niv. Suivant",
+	"level-next": "N. Suivant",
 	"resistances": "Résistances",
 	"type": "Type",
 	"physical-resistance": "Resistance Physique",
@@ -251,6 +251,7 @@
 	"minimum-difficulty": "Min. Diff.",
 	"maintained-powers": "Pouvoirs Maintenus",
 	"number-of-innate-slots": "# Emplacements Innés",
+	"number-of-actions": "Nombre d'actions",
 	"value": "Valeur",
 	"effects": "Effets",
 	"effect": "Effet",
