--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -437,12 +437,12 @@
 	"copper-coins": "Pièces de cuivre",
 	"silver-coins": "Pièces d'argent",
 	"gold-coins": "Pièces d'or",
-	"open-roll-range": "Portée du jet ouvert",
+	"open-roll-range": "Jets Ouverts",
 	"open-roll-no": "Jet Ouvert N°",
 	"open-roll": "Jet Ouvert",
 	"fumble": "Fumble",
 	"doubles": "Doubles",
-	"fumble-range": "Portée des échecs critiques",
+	"fumble-range": "Échecs Critiques",
 	"character-options": "Options de personnage",
 	"whisper-rolls": "MP ?",
 	"never": "Jamais",
